Add finders & query params to API resources list request
