# swagger/v1/swagger.yaml
@@ -106,6 +106,11 @@ paths:
       tags:
       - Authors
       parameters:
+      - name: search
+        in: query
+        required: false
+        schema:
+          type: string
       - name: page
         in: query
         required: false
@@ -120,7 +125,7 @@ paths:
           type: integer
       responses:
         '200':
-          description: Returns list of authors with pagination
+          description: Returns list of authors
           content:
             application/json:
               examples:
@@ -515,6 +520,16 @@ paths:
       tags:
       - Competencies
       parameters:
+      - name: search
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: course_id
+        in: query
+        required: false
+        schema:
+          type: integer
       - name: page
         in: query
         required: false
@@ -529,7 +544,7 @@ paths:
           type: integer
       responses:
         '200':
-          description: Returns list of competencies with pagination
+          description: Returns list of competencies
           content:
             application/json:
               examples:
@@ -894,6 +909,16 @@ paths:
       tags:
       - Courses
       parameters:
+      - name: search
+        in: query
+        required: false
+        schema:
+          type: string
+      - name: author_id
+        in: query
+        required: false
+        schema:
+          type: integer
       - name: page
         in: query
         required: false
@@ -908,7 +933,7 @@ paths:
           type: integer
       responses:
         '200':
-          description: Returns list of courses with pagination
+          description: Returns list of courses
           content:
             application/json:
               examples:
